# atlas-python

./: .coveragerc  README.md  pyproject.toml  pytest.ini
.github/workflows/: publish.yml  release.yml  test.yml
atlas_sdk/: __init__.py  auth.py  client.py  exceptions.py  models.py  storage.py
examples/: jupyter_demo.ipynb  quickstart.py
tests/: __init__.py  test_auth.py  test_client.py  test_models.py  test_storage.py
wattslab_atlas/: __init__.py  auth.py  client.py  models.py  storage.py
