[project]
name = "atlas-sdk"
version = "2.0.1"
description = "Python SDK for Atlas API - A research cartography platform"
authors = [{ name = "Amirhossein Nakhaei", email = "your.email@example.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
keywords = ["atlas", "api", "sdk", "research", "papers"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests>=2.31.0",
    "types-requests>=2.31.0",
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.2",
    "keyring>=24.0.0",
    "cryptography>=41.0.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "types-requests>=2.31.0",
    "jupyter>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/Watts-Lab/atlas-python"
Repository = "https://github.com/Watts-Lab/atlas-python"
Documentation = "https://atlas-python.readthedocs.io"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["atlas_sdk"]

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
no_implicit_optional = true
